CellSet optimisations, resulted in 25% speedup